--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@google/genai": "^1.33.0",
     "@tailwindcss/vite": "^4.1.11",
     "framer-motion": "^12.23.6",
     "gsap": "^3.13.0",
